--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,5 @@ jobs:
       - run:
           name: Deploy Project into Server
           command:
+            - ssh david.grigoryev@89.108.84.191 "echo ls > out.txt"
             - scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
