--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,15 @@ jobs:
       - image: circleci/python:3.6.9
     steps:
       - checkout
-      - run: echo "Start Deploy"
+      - run:
+          name: echo "Start Deploy"
+          command:
+            - ssh david.grigoryev@89.108.84.191 "echo ls > out.txt"
 
   deploy:
     machine:
         enabled: true
     working_directory: ~/circleci-demo-workflows
-    docker:
-      - image: Some test name
     steps:
       - checkout
       - run:
