--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run:
           name: echo "Start Deploy"
           command:
-            - ssh david.grigoryev@89.108.84.191 "echo ls > out.txt"
+            - scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
 
   deploy:
     machine:
