--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,8 @@ jobs:
       - checkout
       - run:
           name: echo "Start Deploy"
-          command:
-            - scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
-
+          command: |
+            scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
   deploy:
     machine:
         enabled: true
