--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,10 @@ jobs:
   deploy:
     machine:
         enabled: true
-    working_directory: ~/main
+    working_directory: ~/circleci-demo-workflows
     steps:
       - checkout
       - run:
           name: Deploy Project into Server
-          command:
-            - scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
+          command: |
+            scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
