--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,5 +14,5 @@ jobs:
       - checkout
       - run:
           name: Deploy Project into Server
-          command:
-            - scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
+          command: |
+            scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
