--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,10 @@ jobs:
       - image: circleci/python:3.6.8
     steps:
       - checkout
-      - run: echo "Start Deploy"
-  deploy:
-    machine:
-        enabled: true
-    working_directory: ~/circleci-demo-workflows
-    steps:
-      - checkout
       - run:
-          name: Deploy Project into Server
-          command: |
-            scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
+          name: Copy Repo
+          command: git clone --recursive git@github.com:grigdav/smartgarden_webapp.git
+      - run:
+          name:  Deploy Repo
+          command: scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
+
