--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,11 @@ jobs:
     docker:
       - image: circleci/python:3.6.8
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "DVVmHPkb9+Tu2sheiIO1bxcdLR2SOnmuJ/5kMzmpWdY"
       - checkout
       - run:
           name: Copy Repo
           command: git clone --recursive git@github.com:grigdav/smartgarden_webapp.git
       - run:
           name:  Deploy Repo
-          command: scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/ && sleep 100 && yes && davids09
+          command: ls
 
