--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,4 @@ jobs:
           command: git clone --recursive git@github.com:grigdav/smartgarden_webapp.git
       - run:
           name:  Deploy Repo
-          command: scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
-          timeout: 20
-      - run:
-          name: Enter Button
-          command: \
+          command: echo -ne '\n' | scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
