--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,8 @@ jobs:
           name: Copy Repo
           command: git clone --recursive git@github.com:grigdav/smartgarden_webapp.git
       - run:
+          name: Create SSH key
+          command: mkdir .ssh/ && touch known_hosts && echo 'DVVmHPkb9+Tu2sheiIO1bxcdLR2SOnmuJ/5kMzmpWdY' >> .ssh/known_hosts
+      - run:
           name:  Deploy Repo
           command: scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
