--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,9 @@ jobs:
           command: git clone --recursive git@github.com:grigdav/smartgarden_webapp.git
       - run:
           name: Create SSH key
-          command: mkdir .ssh/ && touch known_hosts && echo 'DVVmHPkb9+Tu2sheiIO1bxcdLR2SOnmuJ/5kMzmpWdY' >> .ssh/known_hosts
+          command: ssh-keygen
       - run:
           name:  Deploy Repo
-          command: scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
+          command: | 
+            scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
+            echo 'OK'
