--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
           name: Copy Repo
           command: git clone --recursive git@github.com:grigdav/smartgarden_webapp.git
       - run:
+          name: Read ssh
+          command: ls /home/circleci/.ssh
+      - run:
           name:  Deploy Repo
           command: | 
             scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
