--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ jobs:
           command: echo '|1|1js/CzndnHXh9zAVLTUlPNp+lqY=|319gfgetK71I0zpNmX1iTK8+hCY= ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBCd+FCcHt4koLXATBIwrgzfkNCSDUWReIKNxmbMySQ4TfXB9nGRBuEcbSMyqknlfo5zN2JbtkwAIDXgHsbpzqOY=' >> /home/circleci/.ssh/known_hosts
       - run:
           name: Update SSH
-          command: echo 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILnVYhNMR1GstxN8CFRWVqU5iWDHr2t3p36/DDajm9Ej' >> /home/circleci/.ssh/id_ed25519.pub
+          command: echo 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILnVYhNMR1GstxN8CFRWVqU5iWDHr2t3p36/DDajm9Ej david.grigoryev@smartgarden' >> /home/circleci/.ssh/authorized_keys
       - run:
           name:  Deploy Repo
           command: | 
-            sshpass -p 'davids091686423.' scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
+            scp -r * ssh david.grigoryev@89.108.84.191:/var/www/test_dir/
             echo 'OK'
